[project]
name = "accuknox-aspm-scanner"
version = "0.1.0"
description = "AccuKnox ASPM Scanner"
authors = [{ name = "AccuKnox", email = "accuknox@accuknox.com" }]
dependencies = [
    "pydantic==2.11.4",
    "colorama==0.4.6",
    "asyncio==3.4.3"
]
# TODO: Add accuknox-sq-job as dependency

[project.scripts]
accuknox-aspm-scanner = "aspm_cli.cli:main"
